<resources>
    <string name="app_name">Lecture19</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_create_account">Create Account</string>
    <string name="label_stylin">Stylin\'</string>
    <string name="label_themin">Themin\'</string>
    <string name="label_some">SOME</string>
    <string name="label_buttons">BUTTONS</string>
    <string name="label_that">THAT</string>
    <string name="label_dont">DON\'T</string>
    <string name="label_do_anything">DO ANYTHING</string>
    <string name="label_drawin">Drawin\'</string>
</resources>
