<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobappdev.lecture19.styles.StylinFragment"
    >

    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="6dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_login"
            style="@style/StylinButton"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_create_account"
            style="@style/StylinButton"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_layout_buttons"
        android:padding="6dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_password"
            style="@style/StylinTextView"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPassword"
            style="@style/StylinTextView.StylinEditText"
            tools:hint="Password Here"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_layout_password"
        android:padding="6dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_username"
            style="@style/StylinTextView"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/StylinTextView.StylinEditText"
            tools:hint="Username Here"
            />

    </LinearLayout>

</RelativeLayout>
